# analos-nft-launcher

./: .deployment-trigger  .gitignore  .vercel-fix-deploy.bat  .vercel-fix-deploy.sh  .vercelignore  00-START-HERE.md  ACCESS-CONTROL-SYSTEM-FIX.md  ACTION-REQUIRED-NOW.md  ADAPTIVE-NFT-COMPLETE-GUIDE.md  ADAPTIVE-NFT-SECURITY-AUDIT.md  ADJUSTABLE-PARAMETERS-GUIDE.md  ADMIN-CONTROLS-AND-ALLOCATIONS.md  ADMIN-PANEL-NAVIGATION-GUIDE.md  AI-CONTEXT-QUICK-REFERENCE.md  ALIGNED-PRICING-MODEL.md  ALL-BUILD-FIXES-COMPLETE.md  ALL-PROGRAMS-INTEGRATION-GUIDE.md  ALL_9_PROGRAMS_INTEGRATED.md  ALL_DONE_READY_FOR_RAILWAY_VARS.md  ANALOS-BLOCKCHAIN-INFO.md  ANALOS-DEPLOYMENT-COMPLETE.md  ANALOS-DEPLOYMENT-INSTRUCTIONS.md  ANALOS-DEX-IMPLEMENTATION-PLAN.md  ANALOS-DLMM-COMPLETE-GUIDE.md  ANALOS-DLMM-INTEGRATION.md  ANALOS-MARKETPLACE-INTEGRATION.md  ANALOS-METADATA-IMPLEMENTATION.md  ANALOS-OFFICIAL-INTEGRATION.md  ANALOS-PROFILE-REGISTRY-PROGRAM.md  ANALOS-PROGRAMS-CONFIG.env  ANALOS-SDK-INTEGRATION.md  ANALOS_LAUNCHPAD_INTEGRATION.md  ANIMATED-NFT-STORAGE-STRATEGY.md  ANS-BUILD-OPTIONS-SUMMARY.md  ANS-DEPLOYMENT-GUIDE.md  ANS-QUICK-START.md  ARCHITECTURE-NFT-TO-TOKEN-SYSTEM.md  ARCHITECTURE.md  AUDIT_QUICK_REFERENCE.md  AUDIT_SUMMARY_VISUAL.md  (+509 more)
.bugbot/: config.yml
.github/: SECURITY.md
analos-nft-launcher-program/: Anchor.analos.toml  Anchor.toml  Cargo.toml  README.md  deploy-final.sh  deploy-now.sh  deploy-simple.ps1  deploy-to-analos-proper.sh  deploy-to-analos.sh  deploy-with-user-wallet.sh  get-wallet.sh  simple-deploy.ps1
analos-nft-sdk/: README.md  package.json
analos-simple-nft-program/: Cargo.toml  README.md
analos-simple-nft-program/src/: lib.rs
analos-web3-kit/: DEVELOPMENT_STATUS.md  MIGRATION_GUIDE.md  README.md  integration-example.ts  package-lock.json  package.json  test-basic.js  tsconfig.json
app/: metadata-generator.ts  mint-ui-example.tsx  wallet-provider-setup.tsx
backend/: .env.example  INSTALL_2FA_PACKAGES.md  deploy-losbros.js  new-program-config.md  nixpacks.toml  package-lock.json  package.json  railway.json  server-simple.js  server.js  test-recovery.js  tsconfig.json
backend-integration/: nft-generator-enhanced-routes.ts
backend-minimal/: .gitignore  DEPLOY.md  QUICK_START.md  RAILWAY-DEPLOYMENT.md  README.md  env.example  package-lock.json  package.json  railway.env  tsconfig.json
client/: sdk.ts  types.ts  useAnalosLaunch.tsx
contracts/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
contracts/programs/analos-nft-launcher/: Cargo.toml
contracts/programs/analos-nft-launcher/src/: lib.rs
contracts/tests/: analos-nft-launcher.ts
frontend/: DEPLOYMENT_CHECKLIST.md  current.json  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
frontend-components/: CreatorDashboard.tsx  EnhancedGeneratorIntegration.tsx  MintingInterface.tsx  RevealExperience.tsx
frontend-new/: EXTERNAL_SECURITY_GUIDE.md  PINATA_SETUP.md  SECURITY_AUDIT.md  SECURITY_AUDIT_BONDING_CURVE.md  SECURITY_CHECKLIST.md  SECURITY_ENV_TEMPLATE.txt  eslint.config.mjs  next.config.ts  package-lock.json  package.json  temp.json  test-websocket-connection.html  vercel.json
hello-world-program/: Cargo.toml  program-keypair.json
keys/: README.md
losbros-nft-program/: Anchor.toml  Cargo.toml  deploy.ps1
losbros-nft-workspace/: Anchor.toml
metaplex-standalone/: Cargo.toml
microservices/: MICROSERVICES_SETUP_GUIDE.md  RAILWAY_DEPLOYMENT_GUIDE.md
minimal-analos-program/: minimal.txt  program-keypair.json
nft-generator-dev/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
programs/analos-name-service/: Anchor.toml  Cargo.toml  MINIMAL-TEST.rs  PLAYGROUND-READY.md  PLAYGROUND-VERSION.rs  README.md  build-and-deploy.ps1  build-and-deploy.sh  docker-build.ps1  docker-build.sh
programs/analos-name-service/src/: lib.rs
programs/analos-nft-launchpad/: Cargo.toml
programs/analos-nft-launchpad-core/: Cargo.toml
programs/analos-nft-launchpad-core/src/: lib.rs
programs/analos-nft-launchpad/src/: lib.rs
programs/analos-profile-registry/: Cargo.toml  build.sh  deploy-analos.sh
programs/analos-profile-registry-anchor/: Anchor.toml  Cargo.toml
programs/analos-profile-registry-anchor/src/: lib.rs
programs/analos-profile-registry/src/: lib.rs
scripts/: ADD-METADATA-INSTRUCTIONS.md  DATABASE-SCRIPTS-GUIDE.md  FINAL-WHICH-SCRIPT-TO-USE.md  MASTER-DATABASE-SETUP.sql  WHICH-SCRIPT-TO-USE.md  add-metadata-to-nft.ts  add-metadata-uri-column.sql  add-missing-losbros-nft.sql  add-missing-tables-only.sql  add-platform-fees-table.sql  add-traits-to-missing-nfts.sql  backfill-los-bros-nfts.sql  backfill-nft-metadata.ts  batch-verify-tweets.js  check-all-current-nfts.sql  check-allocation-counts.sql  check-for-secrets.ps1  check-losbros-tier-values.sql  check-missing-metadata-nfts.sql  check-profile-nfts-constraints.sql  check-table-structure.sql  check-team-wallet-mints.sql  check-wallet-tokens.mjs  cleanup-redundant-scripts.sql  cleanup-temp.sh  clear-supabase-storage.js  complete-database-setup.sql  create-collection-settings-table.sql  create-isolated-page.js  create-legal-acceptances-table.sql  create-nft-transfers-table.sql  create-tables-manually.sql  create-user-profiles-only.sql  deploy.sh  diagnose-admin-users.sql  diagnose-all-nft-images.sql  emergency-transfer.sh  final-database-fix.sql  final-verification-checklist.sql  find-los-bros-collection.sql  (+47 more)
services/: complete-generator-integration.ts  enhanced-rarity-calculator.ts  ipfs-integration.ts
simple-analos-deploy/: minimal.txt  program-keypair.json
simple-nft-program/: Anchor.toml  Cargo.toml  program-keypair.json
simple-nft-program/programs/simple-nft-program/: Cargo.toml
simple-nft-program/programs/simple-nft-program/src/: lib.rs
(+844 files in other folders)
