[package]
name = "analos_simple_nft"
version = "1.0.0"
edition = "2021"
description = "Simplified NFT Program for Analos Blockchain"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.16.0"
spl-token = "3.5.0"
borsh = "0.9.3"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[profile.release]
overflow-checks = true
lto = true
opt-level = "z"
codegen-units = 1
