[package]
name = "analos-nft-launcher"
version = "0.1.0"
description = "NFT Launcher for Analos Blockchain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_nft_launcher"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
