[package]
name = "mpl_token_metadata"
version = "1.14.0"
edition = "2021"
description = "Metaplex Token Metadata Program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.3"
num-derive = "0.3"
num-traits = "0.2"
shank = "0.3.0"
solana-program = "1.16.0"
spl-token = "3.5.0"
spl-token-2022 = "0.8.0"
spl-associated-token-account = "1.1.3"
thiserror = "1.0"

# These are simplified versions - Solana Playground will handle them
mpl-token-auth-rules = "1.4.0"
mpl-utils = "0.3.6"

[profile.release]
overflow-checks = true
lto = true
opt-level = "z"
codegen-units = 1
