[package]
name = "analos-name-service"
version = "1.0.0"
description = "Analos Name Service (ANS) - SNS-style username registry for Analos blockchain"
edition = "2021"
authors = ["Analos Team"]

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_name_service"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.18"

