[package]
name = "analos-nft-launchpad-core"
version = "1.0.0"
description = "Analos NFT Launchpad Core - Complete Mega Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_nft_launchpad_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-security-txt = "1.1.1"
default-env = "0.1.1"

