[package]
name = "analos-profile-registry"
version = "1.0.0"
description = "Analos Profile NFT Registry - SNS-style username system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_profile_registry"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.18"

