[package]
name = "analos-profile-registry"
version = "1.0.0"
description = "Analos Profile NFT Registry - SNS-style username system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_profile_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18"
borsh = "0.10.3"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

