[package]
name = "simple-nft-program"
version = "0.1.0"
description = "Simple NFT Program for Analos"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_nft_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
